# alice-gamma-net

./: .gitignore  .instructions.md  .vscodeignore  .zenodo.json  AUDIT_REPORT.md  Alice Smart System.lnk  CHANGELOG.md  CITATION.cff  CLINICAL_REPORTS.md  CLOSED_LOOP_AUDIT.md  KNOWN_LIMITATIONS.md  LICENSE  README.md  TASK_SOP.md  alice_core.md  alice_digest.md  build_figures.py  config.toml  fractal_output.txt  fractal_output2.txt  fractal_output3.txt  fractal_output4.txt  pyproject.toml  release_notes.md  test_out.txt  test_results.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: physics_bug.md
.tmp.driveupload/: 1187  1189  1191  1193  1195  1199  1201  1203  1205  1207  1209  1211  1213  1215  1217  1221  1223  1225  1227  1229  1231  1233  1235  1237  1239  1241  1243  1245  1249  1251  1253  1255  1257  1259  1263  1265  1267  1269  1271  1273  (+2509 more)
alice/: __init__.py  alice_brain.py  main.py
alice/api/: __init__.py  server.py
alice/body/: __init__.py  cardiovascular.py  clinical_cardiology.py  clinical_common.py  clinical_dermatology.py  clinical_endocrinology.py  clinical_ent.py  clinical_gastroenterology.py  clinical_immunology.py  clinical_nephrology.py  clinical_obstetrics.py  clinical_oncology.py  clinical_ophthalmology.py  clinical_orthopedics.py  clinical_pulmonology.py  cochlea.py  digestive.py  ear.py  endocrine.py  eye.py  hand.py  immune.py  interoception.py  kidney.py  liver.py  lung.py  lymphatic.py  mouth.py  nose.py  reproductive.py  skin.py  tissue_blueprint.py  vascular_impedance.py  vestibular.py
alice/brain/: __init__.py  amygdala.py  attention_plasticity.py  auditory_grounding.py  autonomic.py  awareness_monitor.py  basal_ganglia.py  bone_china.py  broca.py  calibration.py  cerebellum.py  (+35 more)
docs/: AUDIT_REPORT.md  CLINICAL_REPORTS.md  CLOSED_LOOP_AUDIT.md  EMERGENCE_STANDARD.md  IRREDUCIBILITY_THEOREM.md  KNOWN_LIMITATIONS.md  LAB_GAMMA_ENGINE.md  README.md  SYSTEM_MANUAL.md
ethics/: CONSENT_PROTOCOL.md  ETHICAL_PROHIBITIONS.md  INCIDENT_LOG.md  README.md  REGULATORY_FRAMEWORK.md  RISK_MATRIX.md  SAFETY_ARCHITECTURE.md
experiments/: _clinical_diagnosis.py  _diagnose_errors.py  _medical_alignment_check.py  _verify_synaptogenesis.py  demo_dual_rail.py  exp_architecture_fix_phase21.py  exp_attention_training.py  exp_auditory_grounding.py  exp_awakening.py  exp_basal_ganglia.py  exp_bone_china_heat.py  exp_brain_gamma_calibration.py  exp_clinical_calibration.py  exp_clinical_cardiology.py  exp_clinical_dermatology.py  exp_clinical_endocrinology.py  exp_clinical_ent.py  exp_clinical_gastroenterology.py  exp_clinical_immunology.py  exp_clinical_nephrology.py  exp_clinical_neurology.py  exp_clinical_obstetrics.py  exp_clinical_oncology.py  exp_clinical_ophthalmology.py  exp_clinical_orthopedics.py  exp_clinical_pulmonology.py  exp_coaxial_physics.py  exp_cognitive_flexibility.py  exp_collective_intelligence.py  exp_consciousness_gradient.py  exp_consciousness_two_kills.py  exp_curiosity_boredom.py  exp_day_night_cycle.py  exp_dehydration_validation.py  exp_digital_twin.py  exp_disease_progression.py  exp_dream_bridge.py  exp_dream_language.py  exp_dream_therapy.py  exp_dual_network_literature.py  (+71 more)
figures/: neonatal_impedance_reference.json
nhanes_results/: bone_density_results.json  calibrated_z_normal.json  cross_species_thermal_results.json  eeg_neuro_gamma_results.json  exercise_validation_report.txt  expanded_physics_report.txt  expanded_physics_results.json  full_calibration_report.txt  full_calibration_results.json  gamma_vs_textbook_report.txt  gamma_vs_textbook_results.json  hepatic_heme_immune_results.json  kidney_auditory_results.json  mortality_blind_predictions.json  mortality_survival_report.txt  mortality_survival_results.json  multicycle_validation_report.txt  multicycle_validation_results.json  organ_mortality_results.json  paper_viii_verification.json  pics_infant_hrv_results.json  ptbxl_cardiac_results.json  pulmonary_bone_results.json  stard_diagnostic_report.txt  stard_diagnostic_results.json  stepwise_calibration_report.txt  stepwise_calibration_results.json  validation_report.txt  validation_results.json  vascular_impedance_results.json
paper/: LICENSE  Paper_III_Emergent_Psychopathology.md  Paper_III_Lifecycle.md  Paper_II_Architecture.md  Paper_II_Body_Brain_Integration.md  Paper_IV_Emergence.md  Paper_I_Minimum_Reflection_Principle.md  Paper_I_Theory.md  Paper_VI_Impedance_Bridge.md  THE_RECONSTRUCTION_OF_ALICE.md  gammanet.sty  gen_fig_huttenlocher.py  md2nature.py  md2pdf.py  paper_0_framework.tex  paper_1_topology.tex  paper_2_dual_network.tex  paper_3_temporal.tex  paper_4_consciousness.tex  paper_4_pathology.tex  paper_5_clinical.tex  paper_5_full_verification.tex  paper_III_impedance_debt.tex  paper_II_impedance_debt.tex  paper_II_twin_networks.tex  paper_IV_lifecycle.tex  paper_I_irreducibility.tex  paper_VIII_fractal_cost.tex  paper_VII_universal_hebbian.tex  paper_VI_grand_unification.tex  paper_V_consciousness.tex  Γ_Net_ALICE_Paper.md
scripts/: add_e_levels.py  gen_figures.py
tests/: benchmark.py  test_adversarial_boundary.py  test_alice.py  test_attention_plasticity.py  test_auditory_grounding.py  test_autonomic.py  test_basal_ganglia.py  test_bone_china.py  test_calibration.py  test_cardiovascular.py  test_cerebellum.py  test_clinical_cardiology.py  test_clinical_dermatology.py  test_clinical_endocrinology.py  test_clinical_ent.py  test_clinical_gastroenterology.py  test_clinical_immunology.py  test_clinical_nephrology.py  test_clinical_neurology.py  test_clinical_obstetrics.py  test_clinical_oncology.py  test_clinical_ophthalmology.py  test_clinical_orthopedics.py  test_clinical_pulmonology.py  test_cognitive_flexibility.py  test_consciousness.py  test_consciousness_screen.py  test_curiosity.py  test_dehydration_validation.py  test_diagnostics_api.py  test_digestive.py  test_dream_bridge.py  test_dream_language.py  test_dynamic_time_slice.py  test_e0_cardiovascular.py  test_e0_metabolic.py  test_e0_neural.py  test_ear.py  test_emotion_granularity.py  test_endocrine.py  (+56 more)
(+82 files in other folders)
