# =============================================================================
# PHYSICS CONSTRAINTS — All AI agents and contributors must satisfy all three:
#
#   (1) SIGNAL PROTOCOL   Every inter-module value must be carried by an
#                         ElectricalSignal object. Raw floats are forbidden.
#
#   (2) HEBBIAN UPDATE    All learning must flow through impedance calibration:
#                         ΔZ = −η · Γ · x_pre · x_post
#                         Direct weight assignment bypassing Γ is forbidden.
#
#   (3) ENERGY CONSERVATION  Every channel must satisfy at every tick:
#                         Γ² + T = 1   (reflected + transmitted = incident)
#                         No module may create or destroy signal energy.
#
# PRE-COMMIT GATE: pytest → physics check → KNOWN_LIMITATIONS.md → classify → commit
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alice-gamma-net"
version = "1.0.0"
description = "Alice Smart System — A physics-driven electronic lifeform based on the Γ-Net architecture"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Hsi-Yu Huang", email = "llc.y.huangll@gmail.com"}
]
dependencies = [
    "numpy>=1.24.0",
    "xxhash>=3.4.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0",
]

[project.urls]
Homepage = "https://github.com/cyhuang76/alice-gamma-net"
Repository = "https://github.com/cyhuang76/alice-gamma-net"
Issues = "https://github.com/cyhuang76/alice-gamma-net/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]
full = [
    "matplotlib>=3.8.0",
    "torch>=2.1.0",
]

[project.scripts]
alice = "alice.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
