# =============================================================================
# UNIFIED PHYSICS PRINCIPLE ??The Minimum Reflection Action
#
#   All Alice behaviour emerges from a single variational principle:
#
#     ??[?] = ??岬 危岬??岬⒙?t) dt  ?? min
#
#   where ?岬?= (Z_load,i ??Z_source,i) / (Z_load,i + Z_source,i).
#
#   This principle yields three operational constraints (all actively verified):
#
#   (C1) ENERGY CONSERVATION  ?虏 + T = 1 at every channel, every tick.
#        Derivation: follows directly from ?'s definition and power conservation.
#        Verification: actively enforced and tested ??numerical drift does NOT
#        self-correct, so this constraint must be checked explicitly.
#
#   (C2) HEBBIAN UPDATE  ?Z = ??路 ? 路 x_pre 路 x_post
#        Derivation: gradient descent of ??[?] with respect to Z_source.
#        All learning is impedance calibration toward ? ??0.
#
#   (C3) SIGNAL PROTOCOL  All inter-module values carried by ElectricalSignal.
#        Derivation: engineering requirement ??? can only be computed if
#        signals carry impedance metadata. Raw floats lack Z ??? undefined.
#
#   Nonlinear physics models (v31.1):
#     ??Butterworth 2nd-order bandwidth roll-off: H(f) = 1/??1+(f/f????
#     ??Johnson-Nyquist thermal noise: N = k_B,alice 路 T_ram 路 ?f 路 L 路 (1+?虏)
#     ??Arrhenius aging: 未 = 未? 路 exp(E_a 路 stress)
#     ??Quemada viscosity: 畏 = 畏? 路 (1 + a路d + b路d鲁)
#     ??Autocorrelation frequency estimation (O(N), no FFT)
#
# PRE-COMMIT GATE: pytest ??physics check ??docs/KNOWN_LIMITATIONS.md ??classify ??commit
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alice-gamma-net"
version = "3.0.0"
description = "Alice Smart System ??A physics-driven electronic lifeform based on the ?-Net architecture"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Hsi-Yu Huang", email = "llc.y.huangll@gmail.com"}
]
dependencies = [
    "numpy>=1.24.0",
    "xxhash>=3.4.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0",
]

[project.urls]
Homepage = "https://github.com/cyhuang76/alice-gamma-net"
Repository = "https://github.com/cyhuang76/alice-gamma-net"
Issues = "https://github.com/cyhuang76/alice-gamma-net/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]
full = [
    "matplotlib>=3.8.0",
    "torch>=2.1.0",
]

[project.scripts]
alice = "alice.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
