# =============================================================================
# UNIFIED PHYSICS PRINCIPLE — The Minimum Reflection Action
#
#   All Alice behaviour emerges from a single variational principle:
#
#     𝒜[Γ] = ∫₀ᵀ Σᵢ Γᵢ²(t) dt  →  min
#
#   where Γᵢ = (Z_load,i − Z_source,i) / (Z_load,i + Z_source,i).
#
#   This principle yields three operational constraints (all actively verified):
#
#   (C1) ENERGY CONSERVATION  Γ² + T = 1 at every channel, every tick.
#        Derivation: follows directly from Γ's definition and power conservation.
#        Verification: actively enforced and tested — numerical drift does NOT
#        self-correct, so this constraint must be checked explicitly.
#
#   (C2) HEBBIAN UPDATE  ΔZ = −η · Γ · x_pre · x_post
#        Derivation: gradient descent of 𝒜[Γ] with respect to Z_source.
#        All learning is impedance calibration toward Γ → 0.
#
#   (C3) SIGNAL PROTOCOL  All inter-module values carried by ElectricalSignal.
#        Derivation: engineering requirement — Γ can only be computed if
#        signals carry impedance metadata. Raw floats lack Z → Γ undefined.
#
#   Nonlinear physics models (v31.1):
#     • Butterworth 2nd-order bandwidth roll-off: H(f) = 1/√(1+(f/fₒ)⁴)
#     • Johnson-Nyquist thermal noise: N = k_B,alice · T_ram · Δf · L · (1+Γ²)
#     • Arrhenius aging: δ = δ₀ · exp(E_a · stress)
#     • Quemada viscosity: η = η₀ · (1 + a·d + b·d³)
#     • Autocorrelation frequency estimation (O(N), no FFT)
#
# PRE-COMMIT GATE: pytest → physics check → KNOWN_LIMITATIONS.md → classify → commit
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alice-gamma-net"
version = "3.2.0"
description = "Alice Smart System — A physics-driven electronic lifeform based on the Γ-Net architecture"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Hsi-Yu Huang", email = "llc.y.huangll@gmail.com"}
]
dependencies = [
    "numpy>=1.24.0",
    "xxhash>=3.4.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0",
]

[project.urls]
Homepage = "https://github.com/cyhuang76/alice-gamma-net"
Repository = "https://github.com/cyhuang76/alice-gamma-net"
Issues = "https://github.com/cyhuang76/alice-gamma-net/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]
full = [
    "matplotlib>=3.8.0",
    "torch>=2.1.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]

[project.scripts]
alice = "alice.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
